added more translation

--- a/contribution/lang/ar.json
+++ b/contribution/lang/ar.json
@@ -1390,6 +1390,10 @@
  	 	 	 	"trans": "مؤثرات صوتية",
  	 	 	 	"eng": "sound effects"
  	 	 	},
+ 	 	 	"enableInGameNotificationSound": {
+ 	 	 	 	"trans": "في صوت إشعار اللعبة",
+ 	 	 	 	"eng": "In game notification sound"
+ 	 	 	},
  	 	 	"disableAttackBar": {
  	 	 	 	"title": {
  	 	 	 	 	"trans": "تعطيل شريط توقيت الهجوم",
@@ -3500,6 +3504,18 @@
  	 	 	 	"eng": "Reach level ${level} for special gifts!"
  	 	 	}
  	 	},
+ 	 	"tutorial": {
+ 	 	 	"trans": "صفحة البرنامج التعليمي",
+ 	 	 	"eng": "Tutorial Page",
+ 	 	 	"description": {
+ 	 	 	 	"trans": "يمكنك إلقاء نظرة على صفحة التعليمية المجتمعية لمعرفة المزيد عن اللعبة. هناك الكثير من النصائح والأدلة لمساعدتك في البدء!",
+ 	 	 	 	"eng": "You can take a look at our community tutorial page to learn more about the game. there are tons of tips and guides to help you get started!"
+ 	 	 	},
+ 	 	 	"questProgress": {
+ 	 	 	 	"trans": "السعي التعليمي الكامل",
+ 	 	 	 	"eng": "Tutorial quest complete"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3583,6 +3599,36 @@
  	 	"abandonConfirm": {
  	 	 	"trans": "هل أنت متأكد أنك تريد التخلي عن هذا البحث؟",
  	 	 	"eng": "Are you sure you want to abandon this quest?"
+ 	 	}
+ 	},
+ 	"MutedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "معطل الدردشة",
+ 	 	 	"eng": "Chat Disabled"
+ 	 	},
+ 	 	"description1": {
+ 	 	 	"trans": "نأسف للغاية حدث هذا ، يرجى فهم أننا مطلوبون من الحفاظ على بيئة آمنة لجميع اللاعبين والتأكد من أن الجميع يمكنهم لعب اللعبة في بيئة ممتعة. لهذا السبب علينا أن نكون كتم عندما تكون هناك حاجة. يرجى قراءة قواعد الدردشة الخاصة بنا من الرابط أدناه للحصول على معلومات كاملة",
+ 	 	 	"eng": "We are very sorry this happened, please understand we are required to maintain a safe environment for all players and ensure that everyone can play the game in a pleasant environment. Thats why we have to mute when it is needed. please do read our chat rules from the link below for full information"
+ 	 	},
+ 	 	"description2": {
+ 	 	 	"trans": "إذا كنت تعتقد أنه كان سوء فهم ، فيرجى الاتصال بالمشرف عبر قناة Discord المرتبطة أدناه.",
+ 	 	 	"eng": "If you believe it was a misunderstanding, please contact the moderator via our discord channel linked below."
+ 	 	},
+ 	 	"description3": {
+ 	 	 	"trans": "إذا كنت ترغب في الإبلاغ عن مشرف لسوء المعاملة أو سوء السلوك ، فيمكنك التواصل مع Dexter (مطور هذا التطبيق) عبر نموذج الاستئناف أدناه",
+ 	 	 	"eng": "If you would like to report a moderator for abuse or misconduct, you may reach out to Dexter (the developer of this app) via the appeal form below"
+ 	 	},
+ 	 	"description4": {
+ 	 	 	"trans": "بدلاً من ذلك ، يمكنك أيضًا الاتصال بالمطور عبر البريد الإلكتروني على ching.huang.dexter@gmail.com",
+ 	 	 	"eng": "Alternatively, you may also contact the developer via email at ching.huang.dexter@gmail.com"
+ 	 	},
+ 	 	"rules": {
+ 	 	 	"trans": "قواعد الدردشة",
+ 	 	 	"eng": "Chat Rules"
+ 	 	},
+ 	 	"appealForm": {
+ 	 	 	"trans": "نموذج الاستئناف",
+ 	 	 	"eng": "Appeal Form"
  	 	}
  	},
  	"priceTag": {
@@ -3690,6 +3736,10 @@
  	 	 	"trans": "في انتظار ${playerName} لقبول التجارة ...",
  	 	 	"eng": "Waiting for ${playerName} to accept the trade..."
  	 	},
+ 	 	"lockedItem": {
+ 	 	 	"trans": "لقد قفلت هذا العنصر ، وفتحه أولاً للتداول",
+ 	 	 	"eng": "You have locked this item, unlock it first to trade"
+ 	 	},
  	 	"selectAmount": {
  	 	 	"title": {
  	 	 	 	"vars": [
@@ -3725,6 +3775,10 @@
  	 	 	"cantStartTradeNotIdle": {
  	 	 	 	"trans": "لا يمكنك بدء تجارة عندما لا تكون خاملاً",
  	 	 	 	"eng": "You can not start a trade when you are not idle"
+ 	 	 	},
+ 	 	 	"cantStartTradeLimited": {
+ 	 	 	 	"trans": "لا يمكنك بدء تجارة الآن",
+ 	 	 	 	"eng": "You can not start a trade now"
  	 	 	},
  	 	 	"targetPlayerBlockedYou": {
  	 	 	 	"trans": "لا يمكنك إرسال دعوة تجارية لهذا اللاعب",
@@ -6381,6 +6435,16 @@
  	 	 	 	 	"trans": "ضع عنصر في السوق",
  	 	 	 	 	"eng": "Place an item on the market"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"tutorial": {
+ 	 	 	 	"name": {
+ 	 	 	 	 	"trans": "افتح صفحة البرنامج التعليمي",
+ 	 	 	 	 	"eng": "Open tutorial Page"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "صفحة البرنامج التعليمي في علامة تبويب الملف الشخصي -> البرنامج التعليمي",
+ 	 	 	 	 	"eng": "Tutorial Page is in profile tab -> Tutorial"
+ 	 	 	 	}
  	 	 	}
  	 	}
  	},
@@ -7340,7 +7404,7 @@
  	 	},
  	 	"footnote2": {
  	 	 	"trans": "*ستتلقى الأوقات في صندوق الوارد الخاص بك عندما يصل صديقك إلى المستوى 20",
- 	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
+ 	 	 	"eng": "*You will receive the items in your item inbox when your friend reaches level 20"
  	 	}
  	},
  	"reportPlayerModal": {
@@ -7652,6 +7716,12 @@
  	 	 	],
  	 	 	"trans": "لقد أرسلت بنجاح شعار إلى لاعب \"${playerName}\"",
  	 	 	"eng": "You have successfully sent an emblem to player \"${playerName}\""
+ 	 	}
+ 	},
+ 	"gifting": {
+ 	 	"cannotSend": {
+ 	 	 	"trans": "لا يمكن لهذا اللاعب الحصول على هدية الآن",
+ 	 	 	"eng": "This player cannot receive gift now"
  	 	}
  	},
  	"player": {
