--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -1390,6 +1390,10 @@
  	 	 	 	"trans": "zvukové efekty",
  	 	 	 	"eng": "sound effects"
  	 	 	},
+ 	 	 	"enableInGameNotificationSound": {
+ 	 	 	 	"trans": "V zvuku oznamování hry",
+ 	 	 	 	"eng": "In game notification sound"
+ 	 	 	},
  	 	 	"disableAttackBar": {
  	 	 	 	"title": {
  	 	 	 	 	"trans": "Zakázat panel časování útoku",
@@ -3500,6 +3504,18 @@
  	 	 	 	"eng": "Reach level ${level} for special gifts!"
  	 	 	}
  	 	},
+ 	 	"tutorial": {
+ 	 	 	"trans": "Stránka tutoriálu",
+ 	 	 	"eng": "Tutorial Page",
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Chcete -li se dozvědět více o hře, můžete se podívat na naši stránku s komunitním tutoriálem. Existuje spousta tipů a průvodců, které vám pomohou začít!",
+ 	 	 	 	"eng": "You can take a look at our community tutorial page to learn more about the game. there are tons of tips and guides to help you get started!"
+ 	 	 	},
+ 	 	 	"questProgress": {
+ 	 	 	 	"trans": "Tutoriární úkol kompletní",
+ 	 	 	 	"eng": "Tutorial quest complete"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3583,6 +3599,36 @@
  	 	"abandonConfirm": {
  	 	 	"trans": "Opravdu chcete zrušit tento úkol?",
  	 	 	"eng": "Are you sure you want to abandon this quest?"
+ 	 	}
+ 	},
+ 	"MutedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "Chat deaktivován",
+ 	 	 	"eng": "Chat Disabled"
+ 	 	},
+ 	 	"description1": {
+ 	 	 	"trans": "Je nám velmi líto, že se to stalo, prosím, pochopte, že jsme povinni udržovat bezpečné prostředí pro všechny hráče a zajistit, aby každý mohl hrát hru v příjemném prostředí. Proto musíme ztlumit, když je to potřeba. Úplné informace si prosím přečtěte naše pravidla chatu z níže uvedeného odkazu",
+ 	 	 	"eng": "We are very sorry this happened, please understand we are required to maintain a safe environment for all players and ensure that everyone can play the game in a pleasant environment. Thats why we have to mute when it is needed. please do read our chat rules from the link below for full information"
+ 	 	},
+ 	 	"description2": {
+ 	 	 	"trans": "Pokud se domníváte, že se jednalo o nedorozumění, obraťte se na moderátora prostřednictvím našeho níže uvedeného kanálu Discord.",
+ 	 	 	"eng": "If you believe it was a misunderstanding, please contact the moderator via our discord channel linked below."
+ 	 	},
+ 	 	"description3": {
+ 	 	 	"trans": "Pokud byste chtěli nahlásit moderátora pro zneužívání nebo pochybení, můžete se obrátit na Dexter (vývojář této aplikace) prostřednictvím níže uvedeného formuláře odvolání",
+ 	 	 	"eng": "If you would like to report a moderator for abuse or misconduct, you may reach out to Dexter (the developer of this app) via the appeal form below"
+ 	 	},
+ 	 	"description4": {
+ 	 	 	"trans": "Případně můžete také kontaktovat vývojáře e -mailem na adrese ching.huang.dexter@gmail.com",
+ 	 	 	"eng": "Alternatively, you may also contact the developer via email at ching.huang.dexter@gmail.com"
+ 	 	},
+ 	 	"rules": {
+ 	 	 	"trans": "Pravidla chatu",
+ 	 	 	"eng": "Chat Rules"
+ 	 	},
+ 	 	"appealForm": {
+ 	 	 	"trans": "Formulář odvolání",
+ 	 	 	"eng": "Appeal Form"
  	 	}
  	},
  	"priceTag": {
@@ -3690,6 +3736,10 @@
  	 	 	"trans": "Čekání na ${playerName} přijmout obchod ...",
  	 	 	"eng": "Waiting for ${playerName} to accept the trade..."
  	 	},
+ 	 	"lockedItem": {
+ 	 	 	"trans": "Tuto položku jste zamkli, nejprve ji odemkněte",
+ 	 	 	"eng": "You have locked this item, unlock it first to trade"
+ 	 	},
  	 	"selectAmount": {
  	 	 	"title": {
  	 	 	 	"vars": [
@@ -3725,6 +3775,10 @@
  	 	 	"cantStartTradeNotIdle": {
  	 	 	 	"trans": "Nemůžete začít obchod, když nejste nečinní",
  	 	 	 	"eng": "You can not start a trade when you are not idle"
+ 	 	 	},
+ 	 	 	"cantStartTradeLimited": {
+ 	 	 	 	"trans": "Nyní nemůžete začít obchod",
+ 	 	 	 	"eng": "You can not start a trade now"
  	 	 	},
  	 	 	"targetPlayerBlockedYou": {
  	 	 	 	"trans": "Na tento hráč nemůžete poslat obchodní pozvání",
@@ -6381,6 +6435,16 @@
  	 	 	 	 	"trans": "Umístit položku na trh",
  	 	 	 	 	"eng": "Place an item on the market"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"tutorial": {
+ 	 	 	 	"name": {
+ 	 	 	 	 	"trans": "Otevřená stránka tutoriálu",
+ 	 	 	 	 	"eng": "Open tutorial Page"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Stránka tutoriálu je na kartě profilu -> Tutoriál",
+ 	 	 	 	 	"eng": "Tutorial Page is in profile tab -> Tutorial"
+ 	 	 	 	}
  	 	 	}
  	 	}
  	},
@@ -7340,7 +7404,7 @@
  	 	},
  	 	"footnote2": {
  	 	 	"trans": "*Dostanete časy ve své doručené poště, až váš přítel dosáhne úrovně 20",
- 	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
+ 	 	 	"eng": "*You will receive the items in your item inbox when your friend reaches level 20"
  	 	}
  	},
  	"reportPlayerModal": {
@@ -7652,6 +7716,12 @@
  	 	 	],
  	 	 	"trans": "Úspěšně jste poslali znak k přehrávači \"${playerName}\"",
  	 	 	"eng": "You have successfully sent an emblem to player \"${playerName}\""
+ 	 	}
+ 	},
+ 	"gifting": {
+ 	 	"cannotSend": {
+ 	 	 	"trans": "Tento hráč nyní nemůže obdržet dárek",
+ 	 	 	"eng": "This player cannot receive gift now"
  	 	}
  	},
  	"player": {
