--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -1062,7 +1062,7 @@
  	 	 	},
  	 	 	"levelSelect": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Level",
+ 	 	 	 	 	"trans": "Eben",
  	 	 	 	 	"eng": "Level"
  	 	 	 	}
  	 	 	},
@@ -1389,6 +1389,10 @@
  	 	 	"enableSoundEffects": {
  	 	 	 	"trans": "Soundeffekte",
  	 	 	 	"eng": "sound effects"
+ 	 	 	},
+ 	 	 	"enableInGameNotificationSound": {
+ 	 	 	 	"trans": "In der Spielemmerifikation Sound",
+ 	 	 	 	"eng": "In game notification sound"
  	 	 	},
  	 	 	"disableAttackBar": {
  	 	 	 	"title": {
@@ -3500,6 +3504,18 @@
  	 	 	 	"eng": "Reach level ${level} for special gifts!"
  	 	 	}
  	 	},
+ 	 	"tutorial": {
+ 	 	 	"trans": "Tutorial -Seite",
+ 	 	 	"eng": "Tutorial Page",
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Sie können sich unsere Community -Tutorial -Seite ansehen, um mehr über das Spiel zu erfahren. Es gibt unzählige Tipps und Führer, die Ihnen helfen, loszulegen!",
+ 	 	 	 	"eng": "You can take a look at our community tutorial page to learn more about the game. there are tons of tips and guides to help you get started!"
+ 	 	 	},
+ 	 	 	"questProgress": {
+ 	 	 	 	"trans": "Tutorial Quest komplett",
+ 	 	 	 	"eng": "Tutorial quest complete"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3585,6 +3601,36 @@
  	 	 	"eng": "Are you sure you want to abandon this quest?"
  	 	}
  	},
+ 	"MutedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "Chat deaktiviert",
+ 	 	 	"eng": "Chat Disabled"
+ 	 	},
+ 	 	"description1": {
+ 	 	 	"trans": "Es tut uns sehr leid, dass dies passiert ist. Bitte haben Sie Verständnis dafür, dass wir eine sichere Umgebung für alle Spieler aufrechterhalten und sicherstellen, dass jeder das Spiel in einer angenehmen Umgebung spielen kann. Deshalb müssen wir stumm schalten, wenn es gebraucht wird. Bitte lesen Sie unsere Chat -Regeln aus dem folgenden Link, um vollständige Informationen zu erhalten",
+ 	 	 	"eng": "We are very sorry this happened, please understand we are required to maintain a safe environment for all players and ensure that everyone can play the game in a pleasant environment. Thats why we have to mute when it is needed. please do read our chat rules from the link below for full information"
+ 	 	},
+ 	 	"description2": {
+ 	 	 	"trans": "Wenn Sie glauben, dass es sich um ein Missverständnis handelt, wenden Sie sich bitte über unseren unten verlinkten Discord -Kanal an den Moderator.",
+ 	 	 	"eng": "If you believe it was a misunderstanding, please contact the moderator via our discord channel linked below."
+ 	 	},
+ 	 	"description3": {
+ 	 	 	"trans": "Wenn Sie einen Moderator wegen Missbrauchs oder Fehlverhaltens melden möchten, können Sie sich über das folgende Berufungsformular an Dexter (den Entwickler dieser App) wenden",
+ 	 	 	"eng": "If you would like to report a moderator for abuse or misconduct, you may reach out to Dexter (the developer of this app) via the appeal form below"
+ 	 	},
+ 	 	"description4": {
+ 	 	 	"trans": "Alternativ können Sie den Entwickler auch per E -Mail unter ching.huang.dexter@gmail.com kontaktieren",
+ 	 	 	"eng": "Alternatively, you may also contact the developer via email at ching.huang.dexter@gmail.com"
+ 	 	},
+ 	 	"rules": {
+ 	 	 	"trans": "Chatregeln",
+ 	 	 	"eng": "Chat Rules"
+ 	 	},
+ 	 	"appealForm": {
+ 	 	 	"trans": "Berufungsform",
+ 	 	 	"eng": "Appeal Form"
+ 	 	}
+ 	},
  	"priceTag": {
  	 	"free": {
  	 	 	"trans": "KOSTENLOS",
@@ -3607,7 +3653,7 @@
  	},
  	"slider": {
  	 	"min": {
- 	 	 	"trans": "Min",
+ 	 	 	"trans": "Mindest",
  	 	 	"eng": "Min"
  	 	},
  	 	"max": {
@@ -3690,6 +3736,10 @@
  	 	 	"trans": "Warten auf ${playerName}, um den Handel zu akzeptieren ...",
  	 	 	"eng": "Waiting for ${playerName} to accept the trade..."
  	 	},
+ 	 	"lockedItem": {
+ 	 	 	"trans": "Sie haben diesen Artikel gesperrt, ihn zuerst zum Handel freischalten",
+ 	 	 	"eng": "You have locked this item, unlock it first to trade"
+ 	 	},
  	 	"selectAmount": {
  	 	 	"title": {
  	 	 	 	"vars": [
@@ -3726,6 +3776,10 @@
  	 	 	 	"trans": "Sie können keinen Handel beginnen, wenn Sie nicht untätig sind",
  	 	 	 	"eng": "You can not start a trade when you are not idle"
  	 	 	},
+ 	 	 	"cantStartTradeLimited": {
+ 	 	 	 	"trans": "Sie können jetzt keinen Handel beginnen",
+ 	 	 	 	"eng": "You can not start a trade now"
+ 	 	 	},
  	 	 	"targetPlayerBlockedYou": {
  	 	 	 	"trans": "Sie können keine Handelseinladung an diesen Spieler senden",
  	 	 	 	"eng": "You cannot send trade invite to this player"
@@ -3736,7 +3790,7 @@
  	 	 	},
  	 	 	"targetPlayerLimited": {
  	 	 	 	"trans": "Zielspieler kann nicht am Handel teilnehmen",
- 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	 	"eng": "You cannot send trade invite to this player"
  	 	 	},
  	 	 	"tooFrequentlyInvite": {
  	 	 	 	"vars": [
@@ -4093,7 +4147,7 @@
  	 	 	"eng": "CyberKitty"
  	 	},
  	 	"donation12": {
- 	 	 	"trans": "CyberSanta",
+ 	 	 	"trans": "Cyberanta",
  	 	 	"eng": "CyberSanta"
  	 	},
  	 	"donation13": {
@@ -6381,6 +6435,16 @@
  	 	 	 	 	"trans": "Platziere einen Gegenstand auf dem Markt",
  	 	 	 	 	"eng": "Place an item on the market"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"tutorial": {
+ 	 	 	 	"name": {
+ 	 	 	 	 	"trans": "Öffnen Sie die Tutorial -Seite",
+ 	 	 	 	 	"eng": "Open tutorial Page"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Die Tutorial -Seite befindet sich in der Registerkarte \"Profile\" -> Tutorial",
+ 	 	 	 	 	"eng": "Tutorial Page is in profile tab -> Tutorial"
+ 	 	 	 	}
  	 	 	}
  	 	}
  	},
@@ -7652,6 +7716,12 @@
  	 	 	],
  	 	 	"trans": "Sie haben ein Emblem erfolgreich an den Spieler \"${playerName}\" gesendet",
  	 	 	"eng": "You have successfully sent an emblem to player \"${playerName}\""
+ 	 	}
+ 	},
+ 	"gifting": {
+ 	 	"cannotSend": {
+ 	 	 	"trans": "Dieser Spieler kann jetzt kein Geschenk erhalten",
+ 	 	 	"eng": "This player cannot receive gift now"
  	 	}
  	},
  	"player": {
