--- a/contribution/lang/id.json
+++ b/contribution/lang/id.json
@@ -1390,6 +1390,10 @@
  	 	 	 	"trans": "efek suara",
  	 	 	 	"eng": "sound effects"
  	 	 	},
+ 	 	 	"enableInGameNotificationSound": {
+ 	 	 	 	"trans": "Dalam suara pemberitahuan game",
+ 	 	 	 	"eng": "In game notification sound"
+ 	 	 	},
  	 	 	"disableAttackBar": {
  	 	 	 	"title": {
  	 	 	 	 	"trans": "Nonaktifkan bar waktu serangan",
@@ -3500,6 +3504,18 @@
  	 	 	 	"eng": "Reach level ${level} for special gifts!"
  	 	 	}
  	 	},
+ 	 	"tutorial": {
+ 	 	 	"trans": "Halaman tutorial",
+ 	 	 	"eng": "Tutorial Page",
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Anda dapat melihat halaman tutorial komunitas kami untuk mempelajari lebih lanjut tentang permainan. Ada banyak tip dan panduan untuk membantu Anda memulai!",
+ 	 	 	 	"eng": "You can take a look at our community tutorial page to learn more about the game. there are tons of tips and guides to help you get started!"
+ 	 	 	},
+ 	 	 	"questProgress": {
+ 	 	 	 	"trans": "Tutorial Quest Lengkap",
+ 	 	 	 	"eng": "Tutorial quest complete"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3583,6 +3599,36 @@
  	 	"abandonConfirm": {
  	 	 	"trans": "Apakah Kamu yakin ingin meninggalkan misi ini?",
  	 	 	"eng": "Are you sure you want to abandon this quest?"
+ 	 	}
+ 	},
+ 	"MutedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "Obrolan dinonaktifkan",
+ 	 	 	"eng": "Chat Disabled"
+ 	 	},
+ 	 	"description1": {
+ 	 	 	"trans": "Kami sangat menyesal ini terjadi, harap dipahami bahwa kami diharuskan mempertahankan lingkungan yang aman untuk semua pemain dan memastikan bahwa semua orang dapat memainkan permainan di lingkungan yang menyenangkan. Itulah mengapa kita harus bisu saat dibutuhkan. Silakan baca aturan obrolan kami dari tautan di bawah ini untuk informasi lengkap",
+ 	 	 	"eng": "We are very sorry this happened, please understand we are required to maintain a safe environment for all players and ensure that everyone can play the game in a pleasant environment. Thats why we have to mute when it is needed. please do read our chat rules from the link below for full information"
+ 	 	},
+ 	 	"description2": {
+ 	 	 	"trans": "Jika Anda yakin itu adalah kesalahpahaman, silakan hubungi moderator melalui saluran perselisihan kami yang ditautkan di bawah ini.",
+ 	 	 	"eng": "If you believe it was a misunderstanding, please contact the moderator via our discord channel linked below."
+ 	 	},
+ 	 	"description3": {
+ 	 	 	"trans": "Jika Anda ingin melaporkan moderator untuk penyalahgunaan atau pelanggaran, Anda dapat menjangkau Dexter (pengembang aplikasi ini) melalui formulir banding di bawah ini",
+ 	 	 	"eng": "If you would like to report a moderator for abuse or misconduct, you may reach out to Dexter (the developer of this app) via the appeal form below"
+ 	 	},
+ 	 	"description4": {
+ 	 	 	"trans": "Atau, Anda juga dapat menghubungi pengembang melalui email di ching.huang.dexter@gmail.com",
+ 	 	 	"eng": "Alternatively, you may also contact the developer via email at ching.huang.dexter@gmail.com"
+ 	 	},
+ 	 	"rules": {
+ 	 	 	"trans": "Aturan obrolan",
+ 	 	 	"eng": "Chat Rules"
+ 	 	},
+ 	 	"appealForm": {
+ 	 	 	"trans": "Formulir Banding",
+ 	 	 	"eng": "Appeal Form"
  	 	}
  	},
  	"priceTag": {
@@ -3690,6 +3736,10 @@
  	 	 	"trans": "Menunggu ${playerName} untuk menerima perdagangan ...",
  	 	 	"eng": "Waiting for ${playerName} to accept the trade..."
  	 	},
+ 	 	"lockedItem": {
+ 	 	 	"trans": "Anda telah mengunci item ini, buka kunci pertama untuk berdagang",
+ 	 	 	"eng": "You have locked this item, unlock it first to trade"
+ 	 	},
  	 	"selectAmount": {
  	 	 	"title": {
  	 	 	 	"vars": [
@@ -3725,6 +3775,10 @@
  	 	 	"cantStartTradeNotIdle": {
  	 	 	 	"trans": "Anda tidak dapat memulai perdagangan saat Anda tidak menganggur",
  	 	 	 	"eng": "You can not start a trade when you are not idle"
+ 	 	 	},
+ 	 	 	"cantStartTradeLimited": {
+ 	 	 	 	"trans": "Anda tidak dapat memulai perdagangan sekarang",
+ 	 	 	 	"eng": "You can not start a trade now"
  	 	 	},
  	 	 	"targetPlayerBlockedYou": {
  	 	 	 	"trans": "Anda tidak dapat mengirim undangan perdagangan ke pemain ini",
@@ -6381,6 +6435,16 @@
  	 	 	 	 	"trans": "Tempatkan barang di kios",
  	 	 	 	 	"eng": "Place an item on the market"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"tutorial": {
+ 	 	 	 	"name": {
+ 	 	 	 	 	"trans": "Buka halaman tutorial",
+ 	 	 	 	 	"eng": "Open tutorial Page"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Halaman tutorial ada di tab Profil -> Tutorial",
+ 	 	 	 	 	"eng": "Tutorial Page is in profile tab -> Tutorial"
+ 	 	 	 	}
  	 	 	}
  	 	}
  	},
@@ -7340,7 +7404,7 @@
  	 	},
  	 	"footnote2": {
  	 	 	"trans": "*Kamu akan menerima item di kotak masuk item Kamu saat teman Kamu mencapai level 20",
- 	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
+ 	 	 	"eng": "*You will receive the items in your item inbox when your friend reaches level 20"
  	 	}
  	},
  	"reportPlayerModal": {
@@ -7652,6 +7716,12 @@
  	 	 	],
  	 	 	"trans": "Anda telah berhasil mengirim lambang ke pemain \"${playerName}\"",
  	 	 	"eng": "You have successfully sent an emblem to player \"${playerName}\""
+ 	 	}
+ 	},
+ 	"gifting": {
+ 	 	"cannotSend": {
+ 	 	 	"trans": "Pemain ini tidak dapat menerima hadiah sekarang",
+ 	 	 	"eng": "This player cannot receive gift now"
  	 	}
  	},
  	"player": {
