--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -1390,6 +1390,10 @@
  	 	 	 	"trans": "Effetti sonori",
  	 	 	 	"eng": "sound effects"
  	 	 	},
+ 	 	 	"enableInGameNotificationSound": {
+ 	 	 	 	"trans": "Nel suono di notifica del gioco",
+ 	 	 	 	"eng": "In game notification sound"
+ 	 	 	},
  	 	 	"disableAttackBar": {
  	 	 	 	"title": {
  	 	 	 	 	"trans": "Disabilita la barra d'attacco",
@@ -3500,6 +3504,18 @@
  	 	 	 	"eng": "Reach level ${level} for special gifts!"
  	 	 	}
  	 	},
+ 	 	"tutorial": {
+ 	 	 	"trans": "Pagina tutorial",
+ 	 	 	"eng": "Tutorial Page",
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Puoi dare un'occhiata alla nostra pagina tutorial della nostra comunità per saperne di più sul gioco. Ci sono tonnellate di consigli e guide per aiutarti a iniziare!",
+ 	 	 	 	"eng": "You can take a look at our community tutorial page to learn more about the game. there are tons of tips and guides to help you get started!"
+ 	 	 	},
+ 	 	 	"questProgress": {
+ 	 	 	 	"trans": "Tutorial Quest Complete",
+ 	 	 	 	"eng": "Tutorial quest complete"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3583,6 +3599,36 @@
  	 	"abandonConfirm": {
  	 	 	"trans": "Sei sicuro di voler abbandonare questa missione?",
  	 	 	"eng": "Are you sure you want to abandon this quest?"
+ 	 	}
+ 	},
+ 	"MutedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "Chat disabile",
+ 	 	 	"eng": "Chat Disabled"
+ 	 	},
+ 	 	"description1": {
+ 	 	 	"trans": "Ci dispiace molto che sia successo, per favore, capisci che dobbiamo mantenere un ambiente sicuro per tutti i giocatori e assicurarsi che tutti possano giocare in un ambiente piacevole. Ecco perché dobbiamo disattivare quando è necessario. Si prega di leggere le nostre regole di chat dal link sottostante per informazioni complete",
+ 	 	 	"eng": "We are very sorry this happened, please understand we are required to maintain a safe environment for all players and ensure that everyone can play the game in a pleasant environment. Thats why we have to mute when it is needed. please do read our chat rules from the link below for full information"
+ 	 	},
+ 	 	"description2": {
+ 	 	 	"trans": "Se ritieni che sia stato un malinteso, ti preghiamo di contattare il moderatore tramite il nostro canale Discord collegato di seguito.",
+ 	 	 	"eng": "If you believe it was a misunderstanding, please contact the moderator via our discord channel linked below."
+ 	 	},
+ 	 	"description3": {
+ 	 	 	"trans": "Se desideri segnalare un moderatore per abuso o cattiva condotta, potresti contattare Dexter (lo sviluppatore di questa app) tramite il modulo di ricorso sottostante",
+ 	 	 	"eng": "If you would like to report a moderator for abuse or misconduct, you may reach out to Dexter (the developer of this app) via the appeal form below"
+ 	 	},
+ 	 	"description4": {
+ 	 	 	"trans": "In alternativa, puoi anche contattare lo sviluppatore via e -mail all'indirizzo ching.huang.dexter@gmail.com",
+ 	 	 	"eng": "Alternatively, you may also contact the developer via email at ching.huang.dexter@gmail.com"
+ 	 	},
+ 	 	"rules": {
+ 	 	 	"trans": "Regole di chat",
+ 	 	 	"eng": "Chat Rules"
+ 	 	},
+ 	 	"appealForm": {
+ 	 	 	"trans": "Modulo di ricorso",
+ 	 	 	"eng": "Appeal Form"
  	 	}
  	},
  	"priceTag": {
@@ -3690,6 +3736,10 @@
  	 	 	"trans": "In attesa che ${playerName} accetti la richiesta di commercio ...",
  	 	 	"eng": "Waiting for ${playerName} to accept the trade..."
  	 	},
+ 	 	"lockedItem": {
+ 	 	 	"trans": "Hai bloccato questo articolo, sbloccalo prima per commerciare",
+ 	 	 	"eng": "You have locked this item, unlock it first to trade"
+ 	 	},
  	 	"selectAmount": {
  	 	 	"title": {
  	 	 	 	"vars": [
@@ -3726,6 +3776,10 @@
  	 	 	 	"trans": "Puoi avviare una sessione di commercio solo quando sei inattivo",
  	 	 	 	"eng": "You can not start a trade when you are not idle"
  	 	 	},
+ 	 	 	"cantStartTradeLimited": {
+ 	 	 	 	"trans": "Non puoi iniziare un commercio ora",
+ 	 	 	 	"eng": "You can not start a trade now"
+ 	 	 	},
  	 	 	"targetPlayerBlockedYou": {
  	 	 	 	"trans": "Non puoi inviare una richiesta di commercio a questo giocatore",
  	 	 	 	"eng": "You cannot send trade invite to this player"
@@ -3735,9 +3789,8 @@
  	 	 	 	"eng": "Target player has disabled gift and trade"
  	 	 	},
  	 	 	"targetPlayerLimited": {
-
  	 	 	 	"trans": "Il giocatore selezionato non può partecipare a sessioni di commercio",
- 	 	 	 	"eng": "Target player cannot participate in trade"
+ 	 	 	 	"eng": "You cannot send trade invite to this player"
  	 	 	},
  	 	 	"tooFrequentlyInvite": {
  	 	 	 	"vars": [
@@ -6595,6 +6648,16 @@
  	 	 	 	 	"trans": "Metti un articolo in vendita nel mercato.",
  	 	 	 	 	"eng": "Place an item on the market"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"tutorial": {
+ 	 	 	 	"name": {
+ 	 	 	 	 	"trans": "Pagina di tutorial aperto",
+ 	 	 	 	 	"eng": "Open tutorial Page"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "La pagina del tutorial è nella scheda Profilo -> Tutorial",
+ 	 	 	 	 	"eng": "Tutorial Page is in profile tab -> Tutorial"
+ 	 	 	 	}
  	 	 	}
  	 	}
  	},
@@ -7554,7 +7617,7 @@
  	 	},
  	 	"footnote2": {
  	 	 	"trans": "*Riceverai una notifica nella tua casella degli oggetti ricevuti quando il tuo amico raggiunge il livello 20",
- 	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
+ 	 	 	"eng": "*You will receive the items in your item inbox when your friend reaches level 20"
  	 	}
  	},
  	"reportPlayerModal": {
@@ -7866,6 +7929,12 @@
  	 	 	],
  	 	 	"trans": "Hai inviato con successo un emblema al giocatore \"${playerName}\"",
  	 	 	"eng": "You have successfully sent an emblem to player \"${playerName}\""
+ 	 	}
+ 	},
+ 	"gifting": {
+ 	 	"cannotSend": {
+ 	 	 	"trans": "Questo giocatore non può ricevere un regalo ora",
+ 	 	 	"eng": "This player cannot receive gift now"
  	 	}
  	},
  	"player": {
