--- a/contribution/lang/nl.json
+++ b/contribution/lang/nl.json
@@ -1390,6 +1390,10 @@
  	 	 	 	"trans": "geluidseffecten",
  	 	 	 	"eng": "sound effects"
  	 	 	},
+ 	 	 	"enableInGameNotificationSound": {
+ 	 	 	 	"trans": "In game melding geluid",
+ 	 	 	 	"eng": "In game notification sound"
+ 	 	 	},
  	 	 	"disableAttackBar": {
  	 	 	 	"title": {
  	 	 	 	 	"trans": "Schakel Attack Timing Bar uit",
@@ -3500,6 +3504,18 @@
  	 	 	 	"eng": "Reach level ${level} for special gifts!"
  	 	 	}
  	 	},
+ 	 	"tutorial": {
+ 	 	 	"trans": "Tutorial pagina",
+ 	 	 	"eng": "Tutorial Page",
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Je kunt een kijkje nemen op onze pagina Community Tutorial voor meer informatie over het spel. Er zijn tonnen tips en gidsen om u te helpen aan de slag te gaan!",
+ 	 	 	 	"eng": "You can take a look at our community tutorial page to learn more about the game. there are tons of tips and guides to help you get started!"
+ 	 	 	},
+ 	 	 	"questProgress": {
+ 	 	 	 	"trans": "Tutorial Quest Compleet",
+ 	 	 	 	"eng": "Tutorial quest complete"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3583,6 +3599,36 @@
  	 	"abandonConfirm": {
  	 	 	"trans": "Weet je zeker dat je deze zoektocht wilt verlaten?",
  	 	 	"eng": "Are you sure you want to abandon this quest?"
+ 	 	}
+ 	},
+ 	"MutedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "Chat uitgeschakeld",
+ 	 	 	"eng": "Chat Disabled"
+ 	 	},
+ 	 	"description1": {
+ 	 	 	"trans": "Het spijt ons zeer dat dit is gebeurd, begrijp alsjeblieft dat we verplicht zijn om een veilige omgeving voor alle spelers te behouden en ervoor te zorgen dat iedereen het spel in een aangename omgeving kan spelen. Daarom moeten we dempen wanneer het nodig is. Lees onze chatregels uit de onderstaande link voor volledige informatie",
+ 	 	 	"eng": "We are very sorry this happened, please understand we are required to maintain a safe environment for all players and ensure that everyone can play the game in a pleasant environment. Thats why we have to mute when it is needed. please do read our chat rules from the link below for full information"
+ 	 	},
+ 	 	"description2": {
+ 	 	 	"trans": "Als u denkt dat het een misverstand was, neem dan contact op met de moderator via ons hieronder gekoppelde Discord -kanaal.",
+ 	 	 	"eng": "If you believe it was a misunderstanding, please contact the moderator via our discord channel linked below."
+ 	 	},
+ 	 	"description3": {
+ 	 	 	"trans": "Als u een moderator wilt melden voor misbruik of wangedrag, kunt u via het onderstaande formulier van de beroepsformulier (de ontwikkelaar van deze app) contact opnemen met Dexter (de ontwikkelaar van deze app)",
+ 	 	 	"eng": "If you would like to report a moderator for abuse or misconduct, you may reach out to Dexter (the developer of this app) via the appeal form below"
+ 	 	},
+ 	 	"description4": {
+ 	 	 	"trans": "Als alternatief kunt u ook contact opnemen met de ontwikkelaar via e -mail op ching.huang.dexter@gmail.com",
+ 	 	 	"eng": "Alternatively, you may also contact the developer via email at ching.huang.dexter@gmail.com"
+ 	 	},
+ 	 	"rules": {
+ 	 	 	"trans": "Chatregels",
+ 	 	 	"eng": "Chat Rules"
+ 	 	},
+ 	 	"appealForm": {
+ 	 	 	"trans": "Beroepsformulier",
+ 	 	 	"eng": "Appeal Form"
  	 	}
  	},
  	"priceTag": {
@@ -3690,6 +3736,10 @@
  	 	 	"trans": "Wachten op ${playerName} om de handel te accepteren ...",
  	 	 	"eng": "Waiting for ${playerName} to accept the trade..."
  	 	},
+ 	 	"lockedItem": {
+ 	 	 	"trans": "Je hebt dit item vergrendeld, ontgrendel het eerst om te handelen",
+ 	 	 	"eng": "You have locked this item, unlock it first to trade"
+ 	 	},
  	 	"selectAmount": {
  	 	 	"title": {
  	 	 	 	"vars": [
@@ -3725,6 +3775,10 @@
  	 	 	"cantStartTradeNotIdle": {
  	 	 	 	"trans": "U kunt geen handel starten als u niet inactief bent",
  	 	 	 	"eng": "You can not start a trade when you are not idle"
+ 	 	 	},
+ 	 	 	"cantStartTradeLimited": {
+ 	 	 	 	"trans": "U kunt nu geen ruil starten",
+ 	 	 	 	"eng": "You can not start a trade now"
  	 	 	},
  	 	 	"targetPlayerBlockedYou": {
  	 	 	 	"trans": "U kunt geen handelsnodiging naar deze speler sturen",
@@ -6381,6 +6435,16 @@
  	 	 	 	 	"trans": "Plaats een item op de markt",
  	 	 	 	 	"eng": "Place an item on the market"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"tutorial": {
+ 	 	 	 	"name": {
+ 	 	 	 	 	"trans": "Open zelfstudiepagina",
+ 	 	 	 	 	"eng": "Open tutorial Page"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Tutorial -pagina staat op het tabblad Profiel -> Tutorial",
+ 	 	 	 	 	"eng": "Tutorial Page is in profile tab -> Tutorial"
+ 	 	 	 	}
  	 	 	}
  	 	}
  	},
@@ -7340,7 +7404,7 @@
  	 	},
  	 	"footnote2": {
  	 	 	"trans": "*U ontvangt de tijden in uw iteminbox wanneer uw vriend niveau 20 bereikt",
- 	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
+ 	 	 	"eng": "*You will receive the items in your item inbox when your friend reaches level 20"
  	 	}
  	},
  	"reportPlayerModal": {
@@ -7652,6 +7716,12 @@
  	 	 	],
  	 	 	"trans": "Je hebt met succes een embleem gestuurd naar de speler \"${playerName}\"",
  	 	 	"eng": "You have successfully sent an emblem to player \"${playerName}\""
+ 	 	}
+ 	},
+ 	"gifting": {
+ 	 	"cannotSend": {
+ 	 	 	"trans": "Deze speler kan nu geen cadeau ontvangen",
+ 	 	 	"eng": "This player cannot receive gift now"
  	 	}
  	},
  	"player": {
