--- a/contribution/lang/ro.json
+++ b/contribution/lang/ro.json
@@ -1390,6 +1390,10 @@
  	 	 	 	"trans": "efecte sonore",
  	 	 	 	"eng": "sound effects"
  	 	 	},
+ 	 	 	"enableInGameNotificationSound": {
+ 	 	 	 	"trans": "În notificarea jocului de joc sunet",
+ 	 	 	 	"eng": "In game notification sound"
+ 	 	 	},
  	 	 	"disableAttackBar": {
  	 	 	 	"title": {
  	 	 	 	 	"trans": "Dezactivați bara de sincronizare a atacului",
@@ -3500,6 +3504,18 @@
  	 	 	 	"eng": "Reach level ${level} for special gifts!"
  	 	 	}
  	 	},
+ 	 	"tutorial": {
+ 	 	 	"trans": "Pagina tutorialului",
+ 	 	 	"eng": "Tutorial Page",
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Puteți arunca o privire la pagina noastră de tutorial comunitar pentru a afla mai multe despre joc. Există o mulțime de sfaturi și ghiduri care să vă ajute să începeți!",
+ 	 	 	 	"eng": "You can take a look at our community tutorial page to learn more about the game. there are tons of tips and guides to help you get started!"
+ 	 	 	},
+ 	 	 	"questProgress": {
+ 	 	 	 	"trans": "Tutorial Quest complet",
+ 	 	 	 	"eng": "Tutorial quest complete"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3583,6 +3599,36 @@
  	 	"abandonConfirm": {
  	 	 	"trans": "Sigur doriți să abandonați această căutare?",
  	 	 	"eng": "Are you sure you want to abandon this quest?"
+ 	 	}
+ 	},
+ 	"MutedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "Chat dezactivat",
+ 	 	 	"eng": "Chat Disabled"
+ 	 	},
+ 	 	"description1": {
+ 	 	 	"trans": "Ne pare rău că s -a întâmplat acest lucru, vă rugăm să înțelegeți că suntem obligați să menținem un mediu sigur pentru toți jucătorii și să ne asigurăm că toată lumea poate juca jocul într -un mediu plăcut. De aceea trebuie să mutăm atunci când este nevoie. Vă rugăm să citiți regulile noastre de chat din linkul de mai jos pentru informații complete",
+ 	 	 	"eng": "We are very sorry this happened, please understand we are required to maintain a safe environment for all players and ensure that everyone can play the game in a pleasant environment. Thats why we have to mute when it is needed. please do read our chat rules from the link below for full information"
+ 	 	},
+ 	 	"description2": {
+ 	 	 	"trans": "Dacă credeți că a fost o neînțelegere, vă rugăm să contactați moderatorul prin intermediul canalului nostru Discord legat mai jos.",
+ 	 	 	"eng": "If you believe it was a misunderstanding, please contact the moderator via our discord channel linked below."
+ 	 	},
+ 	 	"description3": {
+ 	 	 	"trans": "Dacă doriți să raportați un moderator pentru abuz sau conduită incorectă, puteți contacta Dexter (dezvoltatorul acestei aplicații) prin formularul de recurs de mai jos",
+ 	 	 	"eng": "If you would like to report a moderator for abuse or misconduct, you may reach out to Dexter (the developer of this app) via the appeal form below"
+ 	 	},
+ 	 	"description4": {
+ 	 	 	"trans": "În mod alternativ, puteți contacta și dezvoltatorul prin e -mail la ching.huang.dexter@gmail.com",
+ 	 	 	"eng": "Alternatively, you may also contact the developer via email at ching.huang.dexter@gmail.com"
+ 	 	},
+ 	 	"rules": {
+ 	 	 	"trans": "Reguli de chat",
+ 	 	 	"eng": "Chat Rules"
+ 	 	},
+ 	 	"appealForm": {
+ 	 	 	"trans": "Formular de apel",
+ 	 	 	"eng": "Appeal Form"
  	 	}
  	},
  	"priceTag": {
@@ -3690,6 +3736,10 @@
  	 	 	"trans": "Aștept ${playerName} pentru a accepta comerțul ...",
  	 	 	"eng": "Waiting for ${playerName} to accept the trade..."
  	 	},
+ 	 	"lockedItem": {
+ 	 	 	"trans": "Ați blocat acest articol, deblocați -l mai întâi pentru a tranzacționa",
+ 	 	 	"eng": "You have locked this item, unlock it first to trade"
+ 	 	},
  	 	"selectAmount": {
  	 	 	"title": {
  	 	 	 	"vars": [
@@ -3725,6 +3775,10 @@
  	 	 	"cantStartTradeNotIdle": {
  	 	 	 	"trans": "Nu puteți începe un comerț atunci când nu sunteți inactiv",
  	 	 	 	"eng": "You can not start a trade when you are not idle"
+ 	 	 	},
+ 	 	 	"cantStartTradeLimited": {
+ 	 	 	 	"trans": "Nu puteți începe un comerț acum",
+ 	 	 	 	"eng": "You can not start a trade now"
  	 	 	},
  	 	 	"targetPlayerBlockedYou": {
  	 	 	 	"trans": "Nu puteți trimite invitații comerciale către acest jucător",
@@ -6381,6 +6435,16 @@
  	 	 	 	 	"trans": "Plasați un element pe piață",
  	 	 	 	 	"eng": "Place an item on the market"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"tutorial": {
+ 	 	 	 	"name": {
+ 	 	 	 	 	"trans": "Pagina de tutorial deschisă",
+ 	 	 	 	 	"eng": "Open tutorial Page"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Pagina de tutorial este în fila Profil -> Tutorial",
+ 	 	 	 	 	"eng": "Tutorial Page is in profile tab -> Tutorial"
+ 	 	 	 	}
  	 	 	}
  	 	}
  	},
@@ -7340,7 +7404,7 @@
  	 	},
  	 	"footnote2": {
  	 	 	"trans": "*Veți primi orele în căsuța de e -mail a articolului dvs. atunci când prietenul dvs. atinge nivelul 20",
- 	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
+ 	 	 	"eng": "*You will receive the items in your item inbox when your friend reaches level 20"
  	 	}
  	},
  	"reportPlayerModal": {
@@ -7652,6 +7716,12 @@
  	 	 	],
  	 	 	"trans": "Ați trimis cu succes o emblemă la player \"${playerName}\"",
  	 	 	"eng": "You have successfully sent an emblem to player \"${playerName}\""
+ 	 	}
+ 	},
+ 	"gifting": {
+ 	 	"cannotSend": {
+ 	 	 	"trans": "Acest jucător nu poate primi cadou acum",
+ 	 	 	"eng": "This player cannot receive gift now"
  	 	}
  	},
  	"player": {
