--- a/contribution/lang/sk.json
+++ b/contribution/lang/sk.json
@@ -1390,6 +1390,10 @@
  	 	 	 	"trans": "zvukové efekty",
  	 	 	 	"eng": "sound effects"
  	 	 	},
+ 	 	 	"enableInGameNotificationSound": {
+ 	 	 	 	"trans": "V hernom oznámení zvuk",
+ 	 	 	 	"eng": "In game notification sound"
+ 	 	 	},
  	 	 	"disableAttackBar": {
  	 	 	 	"title": {
  	 	 	 	 	"trans": "Zakázať panel časovania útoku",
@@ -3500,6 +3504,18 @@
  	 	 	 	"eng": "Reach level ${level} for special gifts!"
  	 	 	}
  	 	},
+ 	 	"tutorial": {
+ 	 	 	"trans": "Výučba",
+ 	 	 	"eng": "Tutorial Page",
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Viac informácií o hre sa môžete pozrieť na našu komunitnú tutoriálovú stránku. Existuje veľa tipov a sprievodcov, ktorí vám pomôžu začať!",
+ 	 	 	 	"eng": "You can take a look at our community tutorial page to learn more about the game. there are tons of tips and guides to help you get started!"
+ 	 	 	},
+ 	 	 	"questProgress": {
+ 	 	 	 	"trans": "Výukový quest",
+ 	 	 	 	"eng": "Tutorial quest complete"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3583,6 +3599,36 @@
  	 	"abandonConfirm": {
  	 	 	"trans": "Ste si istí, že chcete opustiť túto úlohu?",
  	 	 	"eng": "Are you sure you want to abandon this quest?"
+ 	 	}
+ 	},
+ 	"MutedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "Zakázaný",
+ 	 	 	"eng": "Chat Disabled"
+ 	 	},
+ 	 	"description1": {
+ 	 	 	"trans": "Je nám veľmi ľúto, že sa to stalo, prosím, pochopte, že sme povinní udržiavať bezpečné prostredie pre všetkých hráčov a zabezpečiť, aby každý mohol hrať hru v príjemnom prostredí. Preto musíme stlmiť, keď je to potrebné. Prečítajte si naše pravidlá chatovania z odkazu nižšie, kde nájdete úplné informácie",
+ 	 	 	"eng": "We are very sorry this happened, please understand we are required to maintain a safe environment for all players and ensure that everyone can play the game in a pleasant environment. Thats why we have to mute when it is needed. please do read our chat rules from the link below for full information"
+ 	 	},
+ 	 	"description2": {
+ 	 	 	"trans": "Ak sa domnievate, že to bolo nedorozumenie, kontaktujte moderátora prostredníctvom nášho Discord Channel prepojeného nižšie.",
+ 	 	 	"eng": "If you believe it was a misunderstanding, please contact the moderator via our discord channel linked below."
+ 	 	},
+ 	 	"description3": {
+ 	 	 	"trans": "Ak by ste chceli nahlásiť moderátora za zneužitie alebo priestupok, môžete osloviť Dexter (vývojár tejto aplikácie) prostredníctvom formulára odvolania nižšie",
+ 	 	 	"eng": "If you would like to report a moderator for abuse or misconduct, you may reach out to Dexter (the developer of this app) via the appeal form below"
+ 	 	},
+ 	 	"description4": {
+ 	 	 	"trans": "Prípadne sa môžete tiež obrátiť na vývojára e -mailom na adrese ching.huang.dexter@gmail.com",
+ 	 	 	"eng": "Alternatively, you may also contact the developer via email at ching.huang.dexter@gmail.com"
+ 	 	},
+ 	 	"rules": {
+ 	 	 	"trans": "Pravidlá",
+ 	 	 	"eng": "Chat Rules"
+ 	 	},
+ 	 	"appealForm": {
+ 	 	 	"trans": "Odvolací formulár",
+ 	 	 	"eng": "Appeal Form"
  	 	}
  	},
  	"priceTag": {
@@ -3690,6 +3736,10 @@
  	 	 	"trans": "Čakanie na ${playerName} prijme obchod ...",
  	 	 	"eng": "Waiting for ${playerName} to accept the trade..."
  	 	},
+ 	 	"lockedItem": {
+ 	 	 	"trans": "Zamkli ste túto položku, odomknite ju najskôr do obchodu",
+ 	 	 	"eng": "You have locked this item, unlock it first to trade"
+ 	 	},
  	 	"selectAmount": {
  	 	 	"title": {
  	 	 	 	"vars": [
@@ -3725,6 +3775,10 @@
  	 	 	"cantStartTradeNotIdle": {
  	 	 	 	"trans": "Nemôžete začať obchod, keď nie ste nečinní",
  	 	 	 	"eng": "You can not start a trade when you are not idle"
+ 	 	 	},
+ 	 	 	"cantStartTradeLimited": {
+ 	 	 	 	"trans": "Teraz nemôžete začať obchod",
+ 	 	 	 	"eng": "You can not start a trade now"
  	 	 	},
  	 	 	"targetPlayerBlockedYou": {
  	 	 	 	"trans": "Na tohto hráča nemôžete posielať pozvánku na obchod",
@@ -6594,6 +6648,16 @@
  	 	 	 	 	"trans": "Umiestnite položku na trh",
  	 	 	 	 	"eng": "Place an item on the market"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"tutorial": {
+ 	 	 	 	"name": {
+ 	 	 	 	 	"trans": "Otvorená stránka tutoriálu",
+ 	 	 	 	 	"eng": "Open tutorial Page"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Stránka výučby je na karte Profil -> Výukový program",
+ 	 	 	 	 	"eng": "Tutorial Page is in profile tab -> Tutorial"
+ 	 	 	 	}
  	 	 	}
  	 	}
  	},
@@ -7553,7 +7617,7 @@
  	 	},
  	 	"footnote2": {
  	 	 	"trans": "*Keď váš priateľ dosiahne úroveň 20, dostanete čas",
- 	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
+ 	 	 	"eng": "*You will receive the items in your item inbox when your friend reaches level 20"
  	 	}
  	},
  	"reportPlayerModal": {
@@ -7865,6 +7929,12 @@
  	 	 	],
  	 	 	"trans": "Úspešne ste poslali znak hráčovi „${playerName}“",
  	 	 	"eng": "You have successfully sent an emblem to player \"${playerName}\""
+ 	 	}
+ 	},
+ 	"gifting": {
+ 	 	"cannotSend": {
+ 	 	 	"trans": "Tento hráč teraz nemôže dostať darček",
+ 	 	 	"eng": "This player cannot receive gift now"
  	 	}
  	},
  	"player": {
