--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -1390,6 +1390,10 @@
  	 	 	 	"trans": "Ses Efektleri",
  	 	 	 	"eng": "sound effects"
  	 	 	},
+ 	 	 	"enableInGameNotificationSound": {
+ 	 	 	 	"trans": "Oyun Bildirimi Sesinde",
+ 	 	 	 	"eng": "In game notification sound"
+ 	 	 	},
  	 	 	"disableAttackBar": {
  	 	 	 	"title": {
  	 	 	 	 	"trans": "Saldırı zamanlama çubuğunu devre dışı bırak",
@@ -3500,6 +3504,18 @@
  	 	 	 	"eng": "Reach level ${level} for special gifts!"
  	 	 	}
  	 	},
+ 	 	"tutorial": {
+ 	 	 	"trans": "Öğretici sayfası",
+ 	 	 	"eng": "Tutorial Page",
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Oyun hakkında daha fazla bilgi edinmek için Topluluk Eğitim Sayfamıza bir göz atabilirsiniz. Başlamanıza yardımcı olacak tonlarca ipucu ve rehber var!",
+ 	 	 	 	"eng": "You can take a look at our community tutorial page to learn more about the game. there are tons of tips and guides to help you get started!"
+ 	 	 	},
+ 	 	 	"questProgress": {
+ 	 	 	 	"trans": "Öğretici Görev tamamlandı",
+ 	 	 	 	"eng": "Tutorial quest complete"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3583,6 +3599,36 @@
  	 	"abandonConfirm": {
  	 	 	"trans": "Bu görevi bırakmak istediğinize emin misiniz?",
  	 	 	"eng": "Are you sure you want to abandon this quest?"
+ 	 	}
+ 	},
+ 	"MutedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "Sohbet devre dışı",
+ 	 	 	"eng": "Chat Disabled"
+ 	 	},
+ 	 	"description1": {
+ 	 	 	"trans": "Bunun gerçekleştiğine çok üzgünüz, lütfen tüm oyuncular için güvenli bir ortam sağlamamız ve herkesin oyunu hoş bir ortamda oynayabilmesini sağlamak gerektiğini anlayın. Bu yüzden gerektiğinde susturmalıyız. Tam bilgi için lütfen aşağıdaki bağlantıdan sohbet kurallarımızı okuyun",
+ 	 	 	"eng": "We are very sorry this happened, please understand we are required to maintain a safe environment for all players and ensure that everyone can play the game in a pleasant environment. Thats why we have to mute when it is needed. please do read our chat rules from the link below for full information"
+ 	 	},
+ 	 	"description2": {
+ 	 	 	"trans": "Bunun bir yanlış anlama olduğuna inanıyorsanız, lütfen aşağıda bağlantılı Discord kanalımız aracılığıyla moderatörle iletişime geçin.",
+ 	 	 	"eng": "If you believe it was a misunderstanding, please contact the moderator via our discord channel linked below."
+ 	 	},
+ 	 	"description3": {
+ 	 	 	"trans": "Kötüye kullanım veya suistimal için bir moderatör bildirmek isterseniz, aşağıdaki itiraz formu aracılığıyla Dexter'a (bu uygulamanın geliştiricisi) ulaşabilirsiniz",
+ 	 	 	"eng": "If you would like to report a moderator for abuse or misconduct, you may reach out to Dexter (the developer of this app) via the appeal form below"
+ 	 	},
+ 	 	"description4": {
+ 	 	 	"trans": "Alternatif olarak, ching.huang.dexter@gmail.com adresinden e -posta yoluyla geliştiriciyle de iletişime geçebilirsiniz",
+ 	 	 	"eng": "Alternatively, you may also contact the developer via email at ching.huang.dexter@gmail.com"
+ 	 	},
+ 	 	"rules": {
+ 	 	 	"trans": "Sohbet Kuralları",
+ 	 	 	"eng": "Chat Rules"
+ 	 	},
+ 	 	"appealForm": {
+ 	 	 	"trans": "Temyiz formu",
+ 	 	 	"eng": "Appeal Form"
  	 	}
  	},
  	"priceTag": {
@@ -3690,6 +3736,10 @@
  	 	 	"trans": "Ticareti kabul etmek için ${playerName} bekliyor ...",
  	 	 	"eng": "Waiting for ${playerName} to accept the trade..."
  	 	},
+ 	 	"lockedItem": {
+ 	 	 	"trans": "Bu öğeyi kilitlediniz, önce takas etmek için kilidini aç",
+ 	 	 	"eng": "You have locked this item, unlock it first to trade"
+ 	 	},
  	 	"selectAmount": {
  	 	 	"title": {
  	 	 	 	"vars": [
@@ -3725,6 +3775,10 @@
  	 	 	"cantStartTradeNotIdle": {
  	 	 	 	"trans": "Boşta olmadığınızda bir ticarete başlayamazsınız",
  	 	 	 	"eng": "You can not start a trade when you are not idle"
+ 	 	 	},
+ 	 	 	"cantStartTradeLimited": {
+ 	 	 	 	"trans": "Şimdi bir ticarete başlayamazsın",
+ 	 	 	 	"eng": "You can not start a trade now"
  	 	 	},
  	 	 	"targetPlayerBlockedYou": {
  	 	 	 	"trans": "Bu oyuncuya ticari davet gönderemezsiniz",
@@ -6381,6 +6435,16 @@
  	 	 	 	 	"trans": "Tezgahına bir ürün yerleştir",
  	 	 	 	 	"eng": "Place an item on the market"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"tutorial": {
+ 	 	 	 	"name": {
+ 	 	 	 	 	"trans": "Öğretici Sayfayı Aç",
+ 	 	 	 	 	"eng": "Open tutorial Page"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Öğretici sayfası profil sekmesinde -> öğretici",
+ 	 	 	 	 	"eng": "Tutorial Page is in profile tab -> Tutorial"
+ 	 	 	 	}
  	 	 	}
  	 	}
  	},
@@ -7340,7 +7404,7 @@
  	 	},
  	 	"footnote2": {
  	 	 	"trans": "*Arkadaşınız Seviye 20'ye ulaştığında, öğe gelen kutunuzdaki zamanları alacaksınız",
- 	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
+ 	 	 	"eng": "*You will receive the items in your item inbox when your friend reaches level 20"
  	 	}
  	},
  	"reportPlayerModal": {
@@ -7652,6 +7716,12 @@
  	 	 	],
  	 	 	"trans": "\"${playerName}\" oyuncusuna başarıyla bir amblem gönderdiniz",
  	 	 	"eng": "You have successfully sent an emblem to player \"${playerName}\""
+ 	 	}
+ 	},
+ 	"gifting": {
+ 	 	"cannotSend": {
+ 	 	 	"trans": "Bu oyuncu şimdi hediye alamıyor",
+ 	 	 	"eng": "This player cannot receive gift now"
  	 	}
  	},
  	"player": {
