--- a/contribution/lang/uk.json
+++ b/contribution/lang/uk.json
@@ -1390,6 +1390,10 @@
  	 	 	 	"trans": "звукові ефекти",
  	 	 	 	"eng": "sound effects"
  	 	 	},
+ 	 	 	"enableInGameNotificationSound": {
+ 	 	 	 	"trans": "У ігровому сповіщенні звук",
+ 	 	 	 	"eng": "In game notification sound"
+ 	 	 	},
  	 	 	"disableAttackBar": {
  	 	 	 	"title": {
  	 	 	 	 	"trans": "Вимкнути смужку потужності атаки",
@@ -3500,6 +3504,18 @@
  	 	 	 	"eng": "Reach level ${level} for special gifts!"
  	 	 	}
  	 	},
+ 	 	"tutorial": {
+ 	 	 	"trans": "Сторінка підручника",
+ 	 	 	"eng": "Tutorial Page",
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Ви можете поглянути на сторінку підручника нашої спільноти, щоб дізнатися більше про гру. Є багато порад та путівників, які допоможуть вам розпочати роботу!",
+ 	 	 	 	"eng": "You can take a look at our community tutorial page to learn more about the game. there are tons of tips and guides to help you get started!"
+ 	 	 	},
+ 	 	 	"questProgress": {
+ 	 	 	 	"trans": "Підручник Квест завершений",
+ 	 	 	 	"eng": "Tutorial quest complete"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3583,6 +3599,36 @@
  	 	"abandonConfirm": {
  	 	 	"trans": "Ви впевнені, що хочете відмовитися від цього завдання?",
  	 	 	"eng": "Are you sure you want to abandon this quest?"
+ 	 	}
+ 	},
+ 	"MutedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "Чат інвалід",
+ 	 	 	"eng": "Chat Disabled"
+ 	 	},
+ 	 	"description1": {
+ 	 	 	"trans": "Нам дуже шкода, що це сталося, будь ласка, зрозумійте, що ми зобов'язані підтримувати безпечне середовище для всіх гравців та переконатися, що кожен може грати в гру в приємних умовах. Ось чому ми повинні приглушити, коли це потрібно. Будь ласка, прочитайте наші правила чату за посиланням нижче для повної інформації",
+ 	 	 	"eng": "We are very sorry this happened, please understand we are required to maintain a safe environment for all players and ensure that everyone can play the game in a pleasant environment. Thats why we have to mute when it is needed. please do read our chat rules from the link below for full information"
+ 	 	},
+ 	 	"description2": {
+ 	 	 	"trans": "Якщо ви вважаєте, що це було непорозуміння, будь ласка, зв'яжіться з модератором через наш канал Discord, пов'язаний нижче.",
+ 	 	 	"eng": "If you believe it was a misunderstanding, please contact the moderator via our discord channel linked below."
+ 	 	},
+ 	 	"description3": {
+ 	 	 	"trans": "Якщо ви хочете повідомити про модератора за зловживання чи порушеннях, ви можете звернутися до Dexter (розробника цієї програми) через форму апеляції нижче",
+ 	 	 	"eng": "If you would like to report a moderator for abuse or misconduct, you may reach out to Dexter (the developer of this app) via the appeal form below"
+ 	 	},
+ 	 	"description4": {
+ 	 	 	"trans": "Крім того, ви також можете зв’язатися з розробником електронною поштою за адресою ching.huang.dexter@gmail.com",
+ 	 	 	"eng": "Alternatively, you may also contact the developer via email at ching.huang.dexter@gmail.com"
+ 	 	},
+ 	 	"rules": {
+ 	 	 	"trans": "Правила чату",
+ 	 	 	"eng": "Chat Rules"
+ 	 	},
+ 	 	"appealForm": {
+ 	 	 	"trans": "Апеляційна форма",
+ 	 	 	"eng": "Appeal Form"
  	 	}
  	},
  	"priceTag": {
@@ -3690,6 +3736,10 @@
  	 	 	"trans": "Чекаючи ${playerName}, щоб прийняти торгівлю ...",
  	 	 	"eng": "Waiting for ${playerName} to accept the trade..."
  	 	},
+ 	 	"lockedItem": {
+ 	 	 	"trans": "Ви заблокували цей предмет, розблокуйте його спочатку для торгівлі",
+ 	 	 	"eng": "You have locked this item, unlock it first to trade"
+ 	 	},
  	 	"selectAmount": {
  	 	 	"title": {
  	 	 	 	"vars": [
@@ -3725,6 +3775,10 @@
  	 	 	"cantStartTradeNotIdle": {
  	 	 	 	"trans": "Ви не можете розпочати торгівлю, коли не простоюєте",
  	 	 	 	"eng": "You can not start a trade when you are not idle"
+ 	 	 	},
+ 	 	 	"cantStartTradeLimited": {
+ 	 	 	 	"trans": "Ви не можете розпочати торгівлю зараз",
+ 	 	 	 	"eng": "You can not start a trade now"
  	 	 	},
  	 	 	"targetPlayerBlockedYou": {
  	 	 	 	"trans": "Ви не можете надіслати запрошення на торгівлю цьому гравцеві",
@@ -6582,6 +6636,16 @@
  	 	 	 	 	"trans": "Виставте будь-яку річ на продаж",
  	 	 	 	 	"eng": "Place an item on the market"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"tutorial": {
+ 	 	 	 	"name": {
+ 	 	 	 	 	"trans": "Відкрита сторінка підручника",
+ 	 	 	 	 	"eng": "Open tutorial Page"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Сторінка підручника знаходиться на вкладці профілю -> Підручник",
+ 	 	 	 	 	"eng": "Tutorial Page is in profile tab -> Tutorial"
+ 	 	 	 	}
  	 	 	}
  	 	}
  	},
@@ -7541,7 +7605,7 @@
  	 	},
  	 	"footnote2": {
  	 	 	"trans": "*Ви отримаєте час у вхідній скриньці товару, коли ваш друг досягне рівня 20",
- 	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
+ 	 	 	"eng": "*You will receive the items in your item inbox when your friend reaches level 20"
  	 	}
  	},
  	"reportPlayerModal": {
@@ -7853,6 +7917,12 @@
  	 	 	],
  	 	 	"trans": "Ви успішно надіслали емблему гравцеві \"${playerName}\"",
  	 	 	"eng": "You have successfully sent an emblem to player \"${playerName}\""
+ 	 	}
+ 	},
+ 	"gifting": {
+ 	 	"cannotSend": {
+ 	 	 	"trans": "Цей гравець зараз не може отримати подарунок",
+ 	 	 	"eng": "This player cannot receive gift now"
  	 	}
  	},
  	"player": {
