--- a/contribution/lang/vi.json
+++ b/contribution/lang/vi.json
@@ -1390,6 +1390,10 @@
  	 	 	 	"trans": "Hiệu ứng âm thanh",
  	 	 	 	"eng": "sound effects"
  	 	 	},
+ 	 	 	"enableInGameNotificationSound": {
+ 	 	 	 	"trans": "Trong âm thanh thông báo trò chơi",
+ 	 	 	 	"eng": "In game notification sound"
+ 	 	 	},
  	 	 	"disableAttackBar": {
  	 	 	 	"title": {
  	 	 	 	 	"trans": "Tắt thanh đo sát thương tấn công",
@@ -3500,6 +3504,18 @@
  	 	 	 	"eng": "Reach level ${level} for special gifts!"
  	 	 	}
  	 	},
+ 	 	"tutorial": {
+ 	 	 	"trans": "Trang hướng dẫn",
+ 	 	 	"eng": "Tutorial Page",
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Bạn có thể xem trang hướng dẫn cộng đồng của chúng tôi để tìm hiểu thêm về trò chơi. Có rất nhiều lời khuyên và hướng dẫn để giúp bạn bắt đầu!",
+ 	 	 	 	"eng": "You can take a look at our community tutorial page to learn more about the game. there are tons of tips and guides to help you get started!"
+ 	 	 	},
+ 	 	 	"questProgress": {
+ 	 	 	 	"trans": "Hướng dẫn hoàn thành nhiệm vụ",
+ 	 	 	 	"eng": "Tutorial quest complete"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3583,6 +3599,36 @@
  	 	"abandonConfirm": {
  	 	 	"trans": "Bạn có chắc chắn muốn từ bỏ nhiệm vụ này?",
  	 	 	"eng": "Are you sure you want to abandon this quest?"
+ 	 	}
+ 	},
+ 	"MutedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "Trò chuyện bị vô hiệu hóa",
+ 	 	 	"eng": "Chat Disabled"
+ 	 	},
+ 	 	"description1": {
+ 	 	 	"trans": "Chúng tôi rất xin lỗi điều này đã xảy ra, xin vui lòng hiểu rằng chúng tôi được yêu cầu duy trì một môi trường an toàn cho tất cả người chơi và đảm bảo rằng mọi người đều có thể chơi trò chơi trong một môi trường dễ chịu. Đó là lý do tại sao chúng ta phải tắt tiếng khi cần thiết. Vui lòng đọc các quy tắc trò chuyện của chúng tôi từ liên kết dưới đây để biết thông tin đầy đủ",
+ 	 	 	"eng": "We are very sorry this happened, please understand we are required to maintain a safe environment for all players and ensure that everyone can play the game in a pleasant environment. Thats why we have to mute when it is needed. please do read our chat rules from the link below for full information"
+ 	 	},
+ 	 	"description2": {
+ 	 	 	"trans": "Nếu bạn tin rằng đó là một sự hiểu lầm, xin vui lòng liên hệ với người điều hành thông qua kênh Discord của chúng tôi được liên kết bên dưới.",
+ 	 	 	"eng": "If you believe it was a misunderstanding, please contact the moderator via our discord channel linked below."
+ 	 	},
+ 	 	"description3": {
+ 	 	 	"trans": "Nếu bạn muốn báo cáo người điều hành về lạm dụng hoặc hành vi sai trái, bạn có thể liên hệ với Dexter (nhà phát triển của ứng dụng này) thông qua mẫu kháng cáo bên dưới",
+ 	 	 	"eng": "If you would like to report a moderator for abuse or misconduct, you may reach out to Dexter (the developer of this app) via the appeal form below"
+ 	 	},
+ 	 	"description4": {
+ 	 	 	"trans": "Ngoài ra, bạn cũng có thể liên hệ với nhà phát triển qua email tại Ching.huang.dexter@gmail.com",
+ 	 	 	"eng": "Alternatively, you may also contact the developer via email at ching.huang.dexter@gmail.com"
+ 	 	},
+ 	 	"rules": {
+ 	 	 	"trans": "Quy tắc trò chuyện",
+ 	 	 	"eng": "Chat Rules"
+ 	 	},
+ 	 	"appealForm": {
+ 	 	 	"trans": "Mẫu kháng cáo",
+ 	 	 	"eng": "Appeal Form"
  	 	}
  	},
  	"priceTag": {
@@ -3690,6 +3736,10 @@
  	 	 	"trans": "Đang chờ ${playerName} để chấp nhận giao dịch ...",
  	 	 	"eng": "Waiting for ${playerName} to accept the trade..."
  	 	},
+ 	 	"lockedItem": {
+ 	 	 	"trans": "Bạn đã khóa mặt hàng này, mở khóa trước để giao dịch",
+ 	 	 	"eng": "You have locked this item, unlock it first to trade"
+ 	 	},
  	 	"selectAmount": {
  	 	 	"title": {
  	 	 	 	"vars": [
@@ -3725,6 +3775,10 @@
  	 	 	"cantStartTradeNotIdle": {
  	 	 	 	"trans": "Bạn không thể bắt đầu giao dịch khi bạn không nhàn rỗi",
  	 	 	 	"eng": "You can not start a trade when you are not idle"
+ 	 	 	},
+ 	 	 	"cantStartTradeLimited": {
+ 	 	 	 	"trans": "Bạn không thể bắt đầu giao dịch ngay bây giờ",
+ 	 	 	 	"eng": "You can not start a trade now"
  	 	 	},
  	 	 	"targetPlayerBlockedYou": {
  	 	 	 	"trans": "Bạn không thể gửi lời mời giao dịch cho người chơi này",
@@ -6381,6 +6435,16 @@
  	 	 	 	 	"trans": "Đặt một mặt hàng trên thị trường",
  	 	 	 	 	"eng": "Place an item on the market"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"tutorial": {
+ 	 	 	 	"name": {
+ 	 	 	 	 	"trans": "Mở trang hướng dẫn",
+ 	 	 	 	 	"eng": "Open tutorial Page"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "Trang hướng dẫn nằm trong tab Hồ sơ -> Hướng dẫn",
+ 	 	 	 	 	"eng": "Tutorial Page is in profile tab -> Tutorial"
+ 	 	 	 	}
  	 	 	}
  	 	}
  	},
@@ -7340,7 +7404,7 @@
  	 	},
  	 	"footnote2": {
  	 	 	"trans": "*Bạn sẽ nhận được thời gian trong hộp thư đến mặt hàng của bạn khi bạn của bạn đạt đến cấp 20",
- 	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
+ 	 	 	"eng": "*You will receive the items in your item inbox when your friend reaches level 20"
  	 	}
  	},
  	"reportPlayerModal": {
@@ -7652,6 +7716,12 @@
  	 	 	],
  	 	 	"trans": "Bạn đã gửi thành công một biểu tượng cho người chơi \"${playerName}\"",
  	 	 	"eng": "You have successfully sent an emblem to player \"${playerName}\""
+ 	 	}
+ 	},
+ 	"gifting": {
+ 	 	"cannotSend": {
+ 	 	 	"trans": "Người chơi này không thể nhận được quà ngay bây giờ",
+ 	 	 	"eng": "This player cannot receive gift now"
  	 	}
  	},
  	"player": {
