--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -1390,6 +1390,10 @@
  	 	 	 	"trans": "音效",
  	 	 	 	"eng": "sound effects"
  	 	 	},
+ 	 	 	"enableInGameNotificationSound": {
+ 	 	 	 	"trans": "在游戏通知中声音",
+ 	 	 	 	"eng": "In game notification sound"
+ 	 	 	},
  	 	 	"disableAttackBar": {
  	 	 	 	"title": {
  	 	 	 	 	"trans": "禁用攻击时机判定条",
@@ -3500,6 +3504,18 @@
  	 	 	 	"eng": "Reach level ${level} for special gifts!"
  	 	 	}
  	 	},
+ 	 	"tutorial": {
+ 	 	 	"trans": "教程页面",
+ 	 	 	"eng": "Tutorial Page",
+ 	 	 	"description": {
+ 	 	 	 	"trans": "您可以查看我们的社区教程页面，以了解有关游戏的更多信息。 有很多技巧和指南可以帮助您入门！",
+ 	 	 	 	"eng": "You can take a look at our community tutorial page to learn more about the game. there are tons of tips and guides to help you get started!"
+ 	 	 	},
+ 	 	 	"questProgress": {
+ 	 	 	 	"trans": "教程任务完成",
+ 	 	 	 	"eng": "Tutorial quest complete"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3583,6 +3599,36 @@
  	 	"abandonConfirm": {
  	 	 	"trans": "您确定要放弃此任务吗？",
  	 	 	"eng": "Are you sure you want to abandon this quest?"
+ 	 	}
+ 	},
+ 	"MutedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "聊天禁用",
+ 	 	 	"eng": "Chat Disabled"
+ 	 	},
+ 	 	"description1": {
+ 	 	 	"trans": "我们非常遗憾地发生这种情况，请理解我们需要为所有玩家维护一个安全的环境，并确保每个人都可以在宜人的环境中玩游戏。 这就是为什么我们必须在需要时静音的原因。 请从下面的链接中阅读我们的聊天规则以获取完整信息",
+ 	 	 	"eng": "We are very sorry this happened, please understand we are required to maintain a safe environment for all players and ensure that everyone can play the game in a pleasant environment. Thats why we have to mute when it is needed. please do read our chat rules from the link below for full information"
+ 	 	},
+ 	 	"description2": {
+ 	 	 	"trans": "如果您认为这是一种误解，请通过下面链接的我们的Discord频道与主持人联系。",
+ 	 	 	"eng": "If you believe it was a misunderstanding, please contact the moderator via our discord channel linked below."
+ 	 	},
+ 	 	"description3": {
+ 	 	 	"trans": "如果您想报告滥用或不当行为的主持人，则可以通过下面的上诉表与Dexter（本应用程序的开发人员）联系",
+ 	 	 	"eng": "If you would like to report a moderator for abuse or misconduct, you may reach out to Dexter (the developer of this app) via the appeal form below"
+ 	 	},
+ 	 	"description4": {
+ 	 	 	"trans": "另外，您也可以通过电子邮件ching.huang.dexter@gmail.com与开发人员联系。",
+ 	 	 	"eng": "Alternatively, you may also contact the developer via email at ching.huang.dexter@gmail.com"
+ 	 	},
+ 	 	"rules": {
+ 	 	 	"trans": "聊天规则",
+ 	 	 	"eng": "Chat Rules"
+ 	 	},
+ 	 	"appealForm": {
+ 	 	 	"trans": "上诉表",
+ 	 	 	"eng": "Appeal Form"
  	 	}
  	},
  	"priceTag": {
@@ -3690,6 +3736,10 @@
  	 	 	"trans": "等待${playerName}接受交易...",
  	 	 	"eng": "Waiting for ${playerName} to accept the trade..."
  	 	},
+ 	 	"lockedItem": {
+ 	 	 	"trans": "您已经锁定了此物品，首先解锁了交易",
+ 	 	 	"eng": "You have locked this item, unlock it first to trade"
+ 	 	},
  	 	"selectAmount": {
  	 	 	"title": {
  	 	 	 	"vars": [
@@ -3725,6 +3775,10 @@
  	 	 	"cantStartTradeNotIdle": {
  	 	 	 	"trans": "当您不闲置时，您无法开始交易",
  	 	 	 	"eng": "You can not start a trade when you are not idle"
+ 	 	 	},
+ 	 	 	"cantStartTradeLimited": {
+ 	 	 	 	"trans": "您现在无法开始交易",
+ 	 	 	 	"eng": "You can not start a trade now"
  	 	 	},
  	 	 	"targetPlayerBlockedYou": {
  	 	 	 	"trans": "您不能将贸易邀请发送给这个球员",
@@ -6594,6 +6648,16 @@
  	 	 	 	 	"trans": "在玩家市集里上架一个物品",
  	 	 	 	 	"eng": "Place an item on the market"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"tutorial": {
+ 	 	 	 	"name": {
+ 	 	 	 	 	"trans": "打开教程页面",
+ 	 	 	 	 	"eng": "Open tutorial Page"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "教程页面在个人资料选项卡中 - >教程",
+ 	 	 	 	 	"eng": "Tutorial Page is in profile tab -> Tutorial"
+ 	 	 	 	}
  	 	 	}
  	 	}
  	},
@@ -7553,7 +7617,7 @@
  	 	},
  	 	"footnote2": {
  	 	 	"trans": "*当您的朋友达到20级时，您将在项目收件箱中收到奖励",
- 	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
+ 	 	 	"eng": "*You will receive the items in your item inbox when your friend reaches level 20"
  	 	}
  	},
  	"reportPlayerModal": {
@@ -7865,6 +7929,12 @@
  	 	 	],
  	 	 	"trans": "您已成功将标志发送给玩家“ ${playerName}”",
  	 	 	"eng": "You have successfully sent an emblem to player \"${playerName}\""
+ 	 	}
+ 	},
+ 	"gifting": {
+ 	 	"cannotSend": {
+ 	 	 	"trans": "这个玩家现在无法收到礼物",
+ 	 	 	"eng": "This player cannot receive gift now"
  	 	}
  	},
  	"player": {
