--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -1390,6 +1390,10 @@
  	 	 	 	"trans": "음향 효과",
  	 	 	 	"eng": "sound effects"
  	 	 	},
+ 	 	 	"enableInGameNotificationSound": {
+ 	 	 	 	"trans": "게임 알림 사운드에서",
+ 	 	 	 	"eng": "In game notification sound"
+ 	 	 	},
  	 	 	"disableAttackBar": {
  	 	 	 	"title": {
  	 	 	 	 	"trans": "공격 타이밍 바 비활성화",
@@ -3500,6 +3504,18 @@
  	 	 	 	"eng": "Reach level ${level} for special gifts!"
  	 	 	}
  	 	},
+ 	 	"tutorial": {
+ 	 	 	"trans": "튜토리얼 페이지",
+ 	 	 	"eng": "Tutorial Page",
+ 	 	 	"description": {
+ 	 	 	 	"trans": "커뮤니티 튜토리얼 페이지를보고 게임에 대한 자세한 내용을 알아볼 수 있습니다. 시작하는 데 도움이되는 수많은 팁과 가이드가 있습니다!",
+ 	 	 	 	"eng": "You can take a look at our community tutorial page to learn more about the game. there are tons of tips and guides to help you get started!"
+ 	 	 	},
+ 	 	 	"questProgress": {
+ 	 	 	 	"trans": "튜토리얼 퀘스트 완료",
+ 	 	 	 	"eng": "Tutorial quest complete"
+ 	 	 	}
+ 	 	},
  	 	"questType": {
  	 	 	"normal": {
  	 	 	 	"name": {
@@ -3583,6 +3599,36 @@
  	 	"abandonConfirm": {
  	 	 	"trans": "정말로 이 퀘스트를 포기하시겠습니까?",
  	 	 	"eng": "Are you sure you want to abandon this quest?"
+ 	 	}
+ 	},
+ 	"MutedScreen": {
+ 	 	"title": {
+ 	 	 	"trans": "채팅 비활성화",
+ 	 	 	"eng": "Chat Disabled"
+ 	 	},
+ 	 	"description1": {
+ 	 	 	"trans": "우리는 이런 일이 일어났습니다. 모든 플레이어에게 안전한 환경을 유지하고 모든 사람이 쾌적한 환경에서 게임을 할 수 있도록해야한다는 것을 이해하십시오. 그것이 우리가 필요할 때 음소거 해야하는 이유입니다. 전체 정보는 아래 링크에서 채팅 규칙을 읽으십시오",
+ 	 	 	"eng": "We are very sorry this happened, please understand we are required to maintain a safe environment for all players and ensure that everyone can play the game in a pleasant environment. Thats why we have to mute when it is needed. please do read our chat rules from the link below for full information"
+ 	 	},
+ 	 	"description2": {
+ 	 	 	"trans": "그것이 오해라고 생각되면 아래 링크 된 Discord 채널을 통해 중재자에게 문의하십시오.",
+ 	 	 	"eng": "If you believe it was a misunderstanding, please contact the moderator via our discord channel linked below."
+ 	 	},
+ 	 	"description3": {
+ 	 	 	"trans": "학대 또는 위법 행위에 대한 중재자를 신고하려면 아래의 이의 제기 양식을 통해 덱스터 (이 앱의 개발자)에게 연락 할 수 있습니다",
+ 	 	 	"eng": "If you would like to report a moderator for abuse or misconduct, you may reach out to Dexter (the developer of this app) via the appeal form below"
+ 	 	},
+ 	 	"description4": {
+ 	 	 	"trans": "또는 ching.huang.dexter@gmail.com으로 이메일을 통해 개발자에게 연락 할 수도 있습니다",
+ 	 	 	"eng": "Alternatively, you may also contact the developer via email at ching.huang.dexter@gmail.com"
+ 	 	},
+ 	 	"rules": {
+ 	 	 	"trans": "채팅 규칙",
+ 	 	 	"eng": "Chat Rules"
+ 	 	},
+ 	 	"appealForm": {
+ 	 	 	"trans": "항소 양식",
+ 	 	 	"eng": "Appeal Form"
  	 	}
  	},
  	"priceTag": {
@@ -3690,6 +3736,10 @@
  	 	 	"trans": "거래를 수락하기 위해 ${playerName}을 기다리고 있습니다 ...",
  	 	 	"eng": "Waiting for ${playerName} to accept the trade..."
  	 	},
+ 	 	"lockedItem": {
+ 	 	 	"trans": "이 항목을 잠그고 먼저 거래를 위해 잠금 해제했습니다",
+ 	 	 	"eng": "You have locked this item, unlock it first to trade"
+ 	 	},
  	 	"selectAmount": {
  	 	 	"title": {
  	 	 	 	"vars": [
@@ -3725,6 +3775,10 @@
  	 	 	"cantStartTradeNotIdle": {
  	 	 	 	"trans": "유후상태가 아니면 거래를 할 수 없습니다",
  	 	 	 	"eng": "You can not start a trade when you are not idle"
+ 	 	 	},
+ 	 	 	"cantStartTradeLimited": {
+ 	 	 	 	"trans": "지금은 거래를 시작할 수 없습니다",
+ 	 	 	 	"eng": "You can not start a trade now"
  	 	 	},
  	 	 	"targetPlayerBlockedYou": {
  	 	 	 	"trans": "이 플레이어에게 거래 초대를 보낼 수 없습니다",
@@ -6490,6 +6544,16 @@
  	 	 	 	 	"trans": "시장 가판대에 아이템을 올려보세요",
  	 	 	 	 	"eng": "Place an item on the market"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"tutorial": {
+ 	 	 	 	"name": {
+ 	 	 	 	 	"trans": "오픈 튜토리얼 페이지",
+ 	 	 	 	 	"eng": "Open tutorial Page"
+ 	 	 	 	},
+ 	 	 	 	"description": {
+ 	 	 	 	 	"trans": "튜토리얼 페이지는 프로필 탭에 있습니다 -> 튜토리얼",
+ 	 	 	 	 	"eng": "Tutorial Page is in profile tab -> Tutorial"
+ 	 	 	 	}
  	 	 	}
  	 	}
  	},
@@ -7449,7 +7513,7 @@
  	 	},
  	 	"footnote2": {
  	 	 	"trans": "*친구가 레벨 20에 도달하면 위에 적혀 있는 아이템을 우편함으로 받을 수 있습니다.",
- 	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
+ 	 	 	"eng": "*You will receive the items in your item inbox when your friend reaches level 20"
  	 	}
  	},
  	"reportPlayerModal": {
@@ -7761,6 +7825,12 @@
  	 	 	],
  	 	 	"trans": "당신은 \"${playerName}\"플레이어에게 엠블럼을 성공적으로 보냈습니다",
  	 	 	"eng": "You have successfully sent an emblem to player \"${playerName}\""
+ 	 	}
+ 	},
+ 	"gifting": {
+ 	 	"cannotSend": {
+ 	 	 	"trans": "이 플레이어는 지금 선물을받을 수 없습니다",
+ 	 	 	"eng": "This player cannot receive gift now"
  	 	}
  	},
  	"player": {
